[gd_scene format=3 uid="uid://daxae5j3rb5at"]

[ext_resource type="Script" uid="uid://neropscav1rw" path="res://Scripts/Player/Player.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Screens/LoadingScreen.tscn" id="2"]
[ext_resource type="Script" uid="uid://ckmaaysgnl42s" path="res://Scripts/Player/Controller.gd" id="2_ex4b6"]
[ext_resource type="PackedScene" path="res://Scenes/Screens/PauseScreen.tscn" id="3"]
[ext_resource type="Script" uid="uid://0hmm8voh06ti" path="res://Scripts/Player/StepHandler.gd" id="3_n5bxu"]
[ext_resource type="PackedScene" uid="uid://b1v853npeepmv" path="res://Assets/Models/ball_gun.glb" id="4"]
[ext_resource type="Script" uid="uid://d3n1ia1mm6tuo" path="res://Scripts/Player/Arms.gd" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/Screens/DeathScreen.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://cfuy5t68moudg" path="res://Assets/Textures/hurt.png" id="7"]
[ext_resource type="Script" uid="uid://73bl3qab7tdx" path="res://Scripts/Player/Labels/Health.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://b152ed7vf8mon" path="res://Assets/Textures/heart_icon.png" id="9"]
[ext_resource type="FontFile" uid="uid://d1u4gt8okvp7k" path="res://Assets/Fonts/Pico.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://cdn2e32elk0hm" path="res://Assets/Textures/cursor.png" id="10_2c51o"]
[ext_resource type="Script" uid="uid://dwggxoqcctpp5" path="res://Scripts/Player/Feet.gd" id="11"]
[ext_resource type="LabelSettings" uid="uid://trejawbbp6n5" path="res://ui_label_settings.tres" id="11_n5bxu"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.8, 0.8, 2)

[sub_resource type="Animation" id="2"]
resource_name = "Crouch"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.4, 1), Vector3(0.4, 0.4, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1.3, 0)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Stand"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.4, 0.7), Vector3(0.4, 0.4, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.3, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70cjg"]
_data = {
&"Crouch": SubResource("2"),
&"Stand": SubResource("3")
}

[sub_resource type="Animation" id="4"]
resource_name = "BallGunIdle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/ball_gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0330683, -0.38366, -0.344882)]
}

[sub_resource type="Animation" id="5"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/ball_gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0330683, -0.400313, -0.303724), Vector3(-0.0330683, -0.38366, -0.344882)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a44u7"]
_data = {
&"BallGunIdle": SubResource("4"),
&"BallGunLaunch": SubResource("5")
}

[sub_resource type="Animation" id="6"]
resource_name = "hurt"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Hurt:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.913725, 0.235294, 0.235294, 0), Color(0.843137, 0.0980392, 0.0980392, 0.580392), Color(0.913725, 0.235294, 0.235294, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(4, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/HurtDirection:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.882353, 0.203922, 0.203922, 0), Color(0.882353, 0.203922, 0.203922, 1), Color(0.882353, 0.203922, 0.203922, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ex4b6"]
_data = {
&"hurt": SubResource("6")
}

[sub_resource type="BoxMesh" id="7"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(0.8, 0.4, 0.8)

[sub_resource type="Shader" id="10"]
code = "shader_type canvas_item;

void fragment() {
    float len = length(UV - vec2(0.5)) * 1.5;

    COLOR = mix(vec4(0.0, 0.0, 0.0, 0.0), COLOR, len);
}"

[sub_resource type="ShaderMaterial" id="11"]
shader = SubResource("10")

[sub_resource type="Animation" id="12"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.345098, 0.898039, 0.25098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="13"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.901961, 0.235294, 0.235294, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5bxu"]
_data = {
&"Heal": SubResource("12"),
&"Hurt": SubResource("13")
}

[node name="Player" type="CharacterBody3D" unique_id=1499444920 groups=["player"]]
script = ExtResource("1")

[node name="Controller" type="Node" parent="." unique_id=1700854218]
script = ExtResource("2_ex4b6")

[node name="StepHandler" type="Node" parent="." unique_id=890784074]
script = ExtResource("3_n5bxu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=2023621066]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
shape = SubResource("1")

[node name="CrouchAnimator" type="AnimationPlayer" parent="." unique_id=481944276]
libraries/ = SubResource("AnimationLibrary_70cjg")

[node name="BallGunAnimator" type="AnimationPlayer" parent="." unique_id=1753181624]
libraries/ = SubResource("AnimationLibrary_a44u7")

[node name="HurtAnimator" type="AnimationPlayer" parent="." unique_id=1871175810]
libraries/ = SubResource("AnimationLibrary_ex4b6")

[node name="StepRay" type="RayCast3D" parent="." unique_id=666416053]

[node name="Arms" type="Node3D" parent="." unique_id=2001070340]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
script = ExtResource("5")

[node name="ball_gun" parent="Arms" unique_id=1631565738 instance=ExtResource("4")]
transform = Transform3D(0.3, 0, 0, 0, 0.281811, -0.102872, 0, 0.102872, 0.281811, -0.0330683, -0.38366, -0.344882)

[node name="Head" type="Node3D" parent="." unique_id=1215308689]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=857658256]
current = true
far = 300.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head" unique_id=982718889]
visible = false
mesh = SubResource("7")

[node name="A" type="Marker3D" parent="Head" unique_id=1251904300]

[node name="B" type="Marker3D" parent="Head" unique_id=1706627127]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Feet" type="Area3D" parent="." unique_id=753479142]
script = ExtResource("11")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet" unique_id=1736340777]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("8")

[node name="LoadingScreen" parent="." unique_id=1247864567 instance=ExtResource("2")]

[node name="PauseScreen" parent="." unique_id=1670808219 instance=ExtResource("3")]

[node name="DeathScreen" parent="." unique_id=1959347814 instance=ExtResource("6")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=222748527]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer" unique_id=1629121370]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.26001
offset_right = -1.26001

[node name="Cursor" type="TextureRect" parent="CanvasLayer/CenterContainer" unique_id=640551929]
texture_filter = 1
layout_mode = 2
texture = ExtResource("10_2c51o")

[node name="Hurt" type="ColorRect" parent="CanvasLayer" unique_id=144691620]
material = SubResource("11")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.464816
offset_top = -0.315002
offset_right = -0.464844
offset_bottom = -0.315002
color = Color(0.913725, 0.235294, 0.235294, 0)

[node name="Debug" type="Label" parent="CanvasLayer" unique_id=1441362769]
offset_right = 40.0
offset_bottom = 14.0

[node name="Health" type="Label" parent="CanvasLayer" unique_id=715254710]
offset_left = 111.0
offset_top = 512.0
offset_right = 159.0
offset_bottom = 532.0
theme_override_fonts/font = ExtResource("10")
text = "0"
label_settings = ExtResource("11_n5bxu")
script = ExtResource("8")

[node name="HealthAnimator" type="AnimationPlayer" parent="CanvasLayer/Health" unique_id=947740105]
libraries/ = SubResource("AnimationLibrary_n5bxu")

[node name="Max" type="Label" parent="CanvasLayer/Health" unique_id=1457209654]
self_modulate = Color(1, 1, 1, 0.133333)
layout_mode = 0
offset_left = 16.0
offset_right = 80.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("10")
text = "/100"
label_settings = ExtResource("11_n5bxu")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Health" unique_id=1957387570]
texture_filter = 1
position = Vector2(-25.574, 0)
scale = Vector2(4, 4)
texture = ExtResource("9")
centered = false

[node name="HurtDirection" type="Sprite2D" parent="CanvasLayer" unique_id=1563870918]
modulate = Color(0.882353, 0.203922, 0.203922, 0)
texture = ExtResource("7")

[connection signal="area_shape_entered" from="Feet" to="Feet" method="_on_area_entered"]
[connection signal="area_shape_exited" from="Feet" to="Feet" method="_on_area_exited"]
